Bug fixes for screen bottom on small screens

--- a/douglasdaly/douglasdaly/static/css/base.css
+++ b/douglasdaly/douglasdaly/static/css/base.css
@@ -20,3 +20,8 @@ body {
 .bd-footer.container-fluid {
     padding: 0px;
 }
+
+.container p img {
+    display: block;
+    margin: auto auto;
+}
